--- a/easy-login/package.json
+++ b/easy-login/package.json
@@ -23,9 +23,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@node-rs/bcrypt": "^1.6.2",
+    "@types/express-session": "^1.17.6",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
