--- a/easy-login/package.json
+++ b/easy-login/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
